# aidant

./: BASE_URL_FEATURE.md  README.md  REFACTORING_SUMMARY.md  SUMMARY.md  demo.py  pyproject.toml
aidant/cli/: commands.py  main.py
aidant/config/: settings.py
aidant/core/domain/: models.py
aidant/core/interfaces/: coder.py  llm_provider.py
aidant/core/services/: chat_service.py
aidant/infrastructure/llm/: openai_provider.py
aidant/infrastructure/repository/: git_repository.py
aidant/ui/terminal/: terminal_interface.py
aidant/utils/: file_utils.py
aider_v2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aider_v2/cli/: main.py
aider_v2/config/: settings.py
aider_v2/core/: container.py
aider_v2/core/interfaces/: repository.py  ui.py
aider_v2/infrastructure/coders/editblock/: editblock_coder.py
aider_v2/infrastructure/llm/: anthropic_provider.py
aider_v2/ui/: printing.py
aider_v2/ui/terminal/: terminal_interface.py
docs/: README.md  architecture.md  basic-usage.md  cli-commands.md  code-editing.md  configuration-files.md  configuration.md  environment-variables.md  extending.md  installation.md  llm-providers.md  repository-management.md  session-management.md  troubleshooting.md  user-interface.md
tests/unit/: test_chat_service.py  test_editblock_coder.py
